--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="card">
                   <img src="MNCTV_logo.png" class="card-img-top" alt="mnctv">
                   <div class="card-body text-center bg-secondary">
-                    <a href="https://www.rctiplus.com/tv/gtv" target="_blank" class="btn btn-primary">Tonton</a>
+                    <a href="https://www.rctiplus.com/tv/mnctv" target="_blank" class="btn btn-primary">Tonton</a>
                   </div>
               </div>
             </div>
